// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControllerModel #constructor should setup initial status 1`] = `
Object {
  "node": "unmounted",
  "readiness": "loading",
  "validation": "unknown",
}
`;

exports[`ControllerModel #getFormStatusByFields should return full form state computed by fields 1`] = `
Object {
  "readiness": "ready",
  "validation": "valid",
}
`;

exports[`ControllerModel #setStatus should set status with merging with previous 1`] = `
Object {
  "node": "mounted",
  "readiness": "ready",
  "validation": "invalid",
}
`;
